// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .fp-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-3 {
  background-color: white;
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid #e6e6eb;
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-9 {
  color: #574feb !important;
}

<div
  class="emotion-7 emotion-1 emotion-9 test fp-Box fp-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-PageWithHeaderHeader fp-Box fp-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 fp-PageWithHeaderContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid #e6e6eb;
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .fp-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 {
  background-color: red;
}

<div
  class="emotion-7 emotion-1 emotion-2 fp-Box fp-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-PageWithHeaderHeader fp-Box fp-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 fp-PageWithHeaderContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .fp-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-3 {
  background-color: white;
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid #e6e6eb;
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

<div
  class="emotion-7 emotion-1 emotion-2 fp-Box fp-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-PageWithHeaderHeader fp-Box fp-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 fp-PageWithHeaderContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .fp-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-3 {
  background-color: white;
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid #e6e6eb;
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-9 {
  color: #574feb !important;
}

<div
  class="emotion-7 emotion-1 emotion-9 fp-Box fp-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-PageWithHeaderHeader fp-Box fp-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 fp-PageWithHeaderContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid #e6e6eb;
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .fp-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 {
  background-color: red;
}

<div
  class="emotion-7 emotion-1 emotion-2 fp-Box fp-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-PageWithHeaderHeader fp-Box fp-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 fp-PageWithHeaderContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid #e6e6eb;
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .fp-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 {
  background-color: red;
}

<div
  class="emotion-7 emotion-1 emotion-2 fp-Box fp-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-PageWithHeaderHeader fp-Box fp-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 fp-PageWithHeaderContent fp-Box"
  >
    hello world
  </div>
</div>
`;
